# utils2devops

./: .gitignore  .gitmodules  .travis.yml  README.md  README.rst  ansible.cfg  justfile  pyproject.toml  requirements.txt  requirements_dev.txt  setup.py  tox.ini
ansible/: ansible.cfg  base-provision-docker-swarm.yml  base-provision-docker.yml  base-provision.yml  docker.yml  hf_nfs_client.yml  hf_nfs_server.yml  inventory  local-simple-swarm.yml  local-swarm.yml  proxmox_setup.yaml  requirements.yml
ansible/defaults/: main.yml
ansible/group_vars/: all.yml
ansible/lab/: ansible.cfg
ansible/swarm/: local-proxy-prom-elk.yml  local-proxy-prom-icinga2.yml  local-with-out-proxy.yml
docs/: Makefile  ansible.md  aws.rst  bins.rst  conf.py  docker_swarm.rst  docker_swarm_aws.rst  index.rst  lab.md  links.inc  lxc_lxd.rst  make.bat  releases_notes.rst  terraform.rst  testing.rst  vagrant.rst
docs/swarm/: SwarmStackBase.rst  aws.rst  local-proxy-prom-Icinga2.rst  local-proxy-prom-elk.rst  local-with-out-proxy.rst
terraform/import/: main.tf  readme.md
terraform/swarm_basic_aws/: ansible.cfg  create_inventory.tf  main.tf  output.tf  swarm.yml  variable.tf
terraform_import/: main.tf  readme.md
tests/: aws_base.py  test_aws_api_gateway.py  test_aws_internet_gateway.py  test_aws_lambda.py  test_aws_network_acl.py  test_aws_s3_bucket.py  test_tools.py
utils2devops/: __init__.py  lxc_container.py  lxc_image.py  lxc_juju_controller.py  lxc_network.py  lxc_profile.py  lxc_storage.py
utils2devops/aws/: __init__.py  aws_lambda.py  (+9 more)
vagrant/: Vagrantfile  vagrant.yml
(+51 files in other folders)
